cmake_minimum_required (VERSION 2.8)

set(CMAKE_VERBOSE_MAKEFILE ON)

project("learn-opencv3")

find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})

set(SUBDIR
chapter1/1OpenCV开发环境的配置/1_HelloOpenCV
chapter1/2图像显示/2_图像显示
chapter1/3图像腐蚀/3_图像腐蚀
chapter1/4blur图像模糊/4_blur图像模糊
chapter1/5canny边缘检测/5_canny边缘检测
chapter1/6播放视频/6_播放视频
chapter1/7调用摄像头/7_调用摄像头
chapter2/8彩色目标跟踪/8_彩色目标跟踪
chapter2/9用光流法进行运动目标检测/9_用光流法进行运动目标检测
chapter2/10点追踪/10_点追踪
chapter2/11人脸识别/11_人脸识别
chapter2/12支持向量机之SVM引导/12_支持向量机之SVM引导
chapter2/13支持向量机之处理线性不可分数据/13_支持向量机之处理线性不可分数据
chapter2/14printf函数用法示例/14_printf函数用法示例
chapter3/15利用imwrite生成透明png图像/15_利用imwrite生成透明png图像
chapter3/16图像的载入，显示和输出/16_图像的载入，显示和输出
chapter3/17为程序界面添加滑动条/17_为程序界面添加滑动条
chapter3/18基本鼠标操作/18_基本鼠标操作
chapter4/19基础图像容器Mat/19_基础图像容器Mat
chapter4/20用OpenCV进行基本绘图/20_用OpenCV进行基本绘图
chapter5/21用指针访问像素/21_用指针访问像素
chapter5/22用迭代器访问像素/22_用迭代器访问像素
chapter5/23用动态地址计算配合at访问像素/23_用动态地址计算配合at访问像素
chapter5/24遍历图像像素的14种方法/24_遍历图像像素的14种方法
chapter5/25初级图像混合/25_初级图像混合
chapter5/26多通道图像混合/26_多通道图像混合
chapter5/27图像对比度、亮度值调整/27_图像对比度、亮度值调整
chapter5/28离散傅里叶变换/28_离散傅里叶变换
chapter5/29XML和YAML文件的写入/29_XML和YAMl文件的写入
chapter5/30XML和YAML文件的读取/30_XML和YAMl文件的读取
chapter6/31boxFilter函数用法示例/31_方框滤波boxFilter函数的使用
chapter6/32blur函数用法示例/32_均值滤波blur函数的使用
chapter6/33GaussianBlur函数用法示例/33_高斯模糊GaussianBlur函数的用法
chapter6/34线性图像滤波综合示例/34_线性图像滤波综合示例
chapter6/35MedianBlur函数用法示例/35_MedianBlur函数用法示例
chapter6/36bilateralFilter函数用法示例/36_双边滤波bilateralFilter函数使用示例
chapter6/37图像滤波综合示例/37_图像滤波综合示例
chapter6/38dilate函数用法示例/38_图像膨胀dilate函数用法示例
chapter6/39erode函数用法示例/39_图像腐蚀erode函数用法示例
chapter6/40图像腐蚀与膨胀综合示例/40_图像腐蚀与膨胀综合示例
chapter6/41用morphologyEx进行图像膨胀/41_用morphologyEx进行图像膨胀
chapter6/42用morphologyEx进行图像腐蚀/42_用morphologyEx进行图像腐蚀
chapter6/43用morphologyEx进行图像开运算/43_用morphologyEx进行图像开运算
chapter6/44用morphologyEx进行图像闭运算/44_用morphologyEx进行图像闭运算
chapter6/45用morphologyEx进行形态学梯度运算/45_用morphologyEx进行形态学梯度运算
chapter6/46用morphologyEx进行形态学顶帽运算/46_用morphologyEx进行形态学顶帽运算
chapter6/47用morphologyEx进行形态学黑帽运算/47_用morphologyEx进行形态学黑帽运算
chapter6/48形态学图像处理综合示例/48_形态学图像处理综合示例
chapter6/49floodFill函数用法示例/49_漫水填充floodFill函数用法示例
chapter6/50漫水填充算法综合示例/50_漫水填充算法综合示例
chapter6/51resize函数用法示例/51_resize函数用法示例
chapter6/52pyrUp函数用法示例/52_pyrUp函数用法示例
chapter6/53pyrDown函数用法示例/53_pyrDown函数用法示例
chapter6/54图像金字塔和resize综合示例/54_图像金字塔和resize综合示例
chapter6/55基本阈值操作/55_基本阈值操作
chapter7/56canny函数用法示例/56_canny函数用法示例
chapter7/57sobel函数用法示例/57_sobel函数用法示例
chapter7/58Laplacian函数用法示例/58_Laplacian函数用法示例
chapter7/59Scharr函数用法示例/59_Scharr函数用法示例
chapter7/60边缘检测综合示例/60_边缘检测综合示例
chapter7/61HoughLines函数用法示例/61_HoughLines函数用法示例
chapter7/62HoughLinesP函数用法示例/62_HoughLinesP函数用法示例
chapter7/63HoughCircles函数用法示例/63_HoughCircles函数用法示例
chapter7/64霍夫线变换综合示例/64_霍夫线变换综合示例
chapter7/65remap函数用法示例/65_remap函数用法示例
chapter7/66实现多种重映射综合示例/66_实现多种重映射综合示例
chapter7/67仿射变换综合示例/67_仿射变换综合示例
chapter7/68直方图均衡化/68_直方图均衡化
chapter8/69轮廓查找基础/69_基础轮廓查找
chapter8/70查找并绘制轮廓综合示例/70_查找并绘制轮廓综合示例
chapter8/71凸包检测基础/71_凸包检测基础
chapter8/72寻找和绘制物体的凸包/72_寻找和绘制物体的凸包
chapter8/73创建包围轮廓的矩形边界/73_创建包围轮廓的矩形边界
chapter8/74创建包围轮廓的圆形边界/74_创建包围轮廓的圆形边界
chapter8/75创建包围轮廓的矩形和圆形边界框/75_创建包围轮廓的矩形和圆形边界框
chapter8/76_查找和绘制图片轮廓矩/76_查找和绘制图片轮廓矩
chapter8/77分水岭算法/77_分水岭算法
chapter8/78图像修补/78_图像修补
chapter9/79H-S二维直方图的绘制/79_H-S二维直方图的绘制
chapter9/80一维直方图的绘制/80_一维直方图的绘制
chapter9/81RGB三色直方图的绘制/81_RGB三色直方图的绘制
chapter9/82直方图对比/82_直方图对比
chapter9/83反向投影/83_反向投影
chapter9/84模板匹配/84_模板匹配
chapter10/85cornerHarris函数用法示例/85_cornerHarris函数用法示例
chapter10/86Harris角点检测/86_Harris角点检测
chapter10/87Shi-Tomasi角点检测/87_Shi-Tomasi角点检测
chapter10/88亚像素级角点检测/88_亚像素级角点检测
)

FOREACH(F ${SUBDIR})
     add_subdirectory(${F})
ENDFOREACH(F)


